--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <p class="logo">Header Logo</p>
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three</a>
+        <p>This website is awesome</p>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <div></div>
+    </div>
+    <div class="body"></div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
