--- a/index.html
+++ b/index.html
@@ -17,7 +17,31 @@
         <button>Sign up</button>
         <div></div>
     </div>
-    <div class="body"></div>
+    <div class="body">
+        <div class="info-container">
+            <p>Some random information</p>
+            <div class="info">
+                <div class="card"></div>
+                <p class="info-text">this is a subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="card"></div>
+                <p class="info-text">this is a subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="card"></div>
+                <p class="info-text">this is a subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="card"></div>
+                <p class="info-text">this is a subtext under an illustration or image</p>
+            </div>
+        </div>
+        <div class="quote-container">
+            <p>"This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</p>
+            <p>-Thor, God of Thunder</p>
+        </div>
+    </div>
     <div class="footer">
 
     </div>
