--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <p>"This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</p>
             <p>-Thor, God of Thunder</p>
         </div>
+        <div class="signup-container">
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="footer">
 
