Style the header
Created a container for the logo and links to be able to style the header
and make it more readable

--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hero">
+    <div class="header">
         <p class="logo">Header Logo</p>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
-        <p>This website is awesome</p>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <div></div>
+        <div class="links">
+            <a class="link" href="">header link one</a>
+            <a class="link" href="">header link two</a>
+            <a class="link" href="">header link three</a>
+        </div>
     </div>
+
+    <div class="hero">
+        <div class="hero-text">
+            <p class="main-text">This website is awesome</p>
+            <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="hero-signup">Sign up</button>
+        </div>
+        <div class="img-container">
+            <div class="fake-img"></div>
+        </div>
+    </div>
+         
     <div class="body">
         <div class="info-container">
             <p>Some random information</p>
