Style the info part
Created cards with some text underneath them and a header on top of them

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         </div>
     </div>
          
-    <div class="body">
-        <div class="info-container">
-            <p>Some random information</p>
+    <div class="body"> 
+        <div class="info-header">
+            <p class="random-info-text">Some random information</p>
+        </div>
+        <div class="info-container"> 
             <div class="info">
                 <div class="card"></div>
                 <p class="info-text">this is a subtext under an illustration or image</p>
