Style the sign-up part
Added background color, changed font size and weight, and styled the button

--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
             <p class="author">-Thor, God of Thunder</p>
         </div>
         <div class="signup-container">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="signup-text">
+                <p class="signup-main-text">Call to action! It's time!</p>
+                <p class="signup-secondary-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-button-container">
+                <button class="signup-button">Sign up</button>
+            </div>
+            
         </div>
     </div>
     <div class="footer">
